kubernetes/kayka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kayak-service
  labels:
    app: kayak-service
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: kayak-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kayak-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kayak-service
  template:
    metadata:
      labels:
        app: kayak-service
        version: v1
    spec:
      containers:
        - name: kayak-app
          image: fabricio211/kayak-app:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
