kubernetes/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kayak-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kayak-service
spec:
  hosts:
    - "*"
  gateways:
    - kayak-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8000
            host: kayak-service

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kayak-service
spec:
  host: "*"
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
